--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         @imthuyanhhh
                     </div>
                     <div>
-                        💃 Dance move that took 2022 by storm!
+                        💃 Dance Move That Took 2022 by Storm!
                     </div>
                 </a>
             </div>
@@ -357,7 +357,7 @@
                         @imthuyanhhh
                     </div>
                     <div>
-                        💖 Fall in Love with 2023's Cutest TikTok!
+                        💖 Fall in Love With 2023's Cutest TikTok!
                     </div>
                 </a>
             </div>
@@ -369,7 +369,7 @@
                         @imthuyanhhh
                     </div>
                     <div>
-                        🚀Record-Breaking! Top-Liked Post of 2024!
+                        🚀Record-Breaking! Top-Liked Post Of 2024!
                     </div>
                 </a>
             </div>
