--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf8" />
-    <title>Odin Admin Dashboard</title>
+    <title>Date with me?</title>
     <link href="style.css" rel="stylesheet" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
 </head>
@@ -414,6 +414,7 @@
         </div>
     </div>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
