--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="projectCard">
                     <div class="sideStretch"></div>
                     <div class="content">
-                        <a class="dateHeader" href="https://www.steakandcompany.co.uk/" target="_blank">Circolo popolare
+                        <a class="dateHeader" href="https://www.circolopopolare.com/restaurants/circolopopolare-london" target="_blank">Circolo popolare
                             <div class="restaurantImages">
                                 <img class="dateImg" src="images/circolo-outside.jpg" alt="exhibition">
                                 <img class="dateImg" src="images/circolo_popolare_food.jpg" alt="">
