--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </a>
         </div>
         <div id="projects">
-            <div class="header">Destinations</div>
+            <div class="header">Dinner Suggestions</div>
             <div id="projectLists">
                 <div class="projectCard">
                     <div class="sideStretch"></div>
