Removed one news

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                 <div class="projectCard">
                     <div class="sideStretch"></div>
                     <div class="content">
-                        <a class="dateHeader" href="https://www.circolopopolare.com/restaurants/circolopopolare-london" target="_blank">Circolo popolare
+                        <a class="dateHeader" href="https://www.circolopopolare.com/restaurants/circolopopolare-london"
+                            target="_blank">Circolo popolare
                             <div class="restaurantImages">
                                 <img class="dateImg" src="images/circolo-outside.jpg" alt="exhibition">
                                 <img class="dateImg" src="images/circolo_popolare_food.jpg" alt="">
@@ -330,12 +331,6 @@
                 Trích các chuyên gia phân tích: "100 điểm không có nhưng".</div>
         </div>
         <hr>
-        <a href="https://www.tiktok.com/@imthuyanhhh/video/7335537992913800481" target="_blank">
-            <div class="newsHeader"> Phát hiện Idol Nguyễn Thúy Anh dạo chơi London cùng nhân vật nam bí ẩn
-        </a>
-        <div class="news">Trông họ có vẻ rất vui &#128518;.</div>
-    </div>
-    <hr>
     </div>
     </div>
     <div id="trending">
